examples/test/testpolicy11821.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11821
  namespace: namespace462
spec:
  podSelector:
    matchLabels:
      key23: value49
      key10: value48
      key0: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value34
          key14: value38
      podSelector:
        matchLabels:
          key12: value42
          key39: value3
          key22: value15
